tests/invalid/method_missing_self/main.py
class Foo:
    x: int

    def get_x() -> int:
        return 0
